<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Food Locker</string>
    <string name="article_not_found">Article not found</string>
    <string name="debit_title">Debit:</string>
    <string name="credit_title">Credit:</string>
    <string name="title_title">Title:</string>
    <string name="stock_title">Stock:</string>
    <string name="category_title">Category:</string>
    <string name="quantity_title">Quantity:</string>
    <string name="min_quantity_title">minimum Quantity:</string>
    <string name="reminder_title">Reminder:</string>
    <string name="no_reminder_set">No reminder set</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="notes_title">Notes:</string>
    <string name="linked_entries_title">Linked Entries:</string>
    <string name="name_title">Name:</string>
    <string name="color_title">Color:</string>
    <string name="choose_color">Choose Color</string>
    <string name="description_title">Description:</string>
    <string name="upc_key_title">UPC Lookup API Key</string>
    <string name="upc_key_summary">This app can resolve the product name from an online database when the entry was created using a bar or an qr-code. To be able to query the online database a private access key is needed. This key can be created after a free registration on https://upcdatabase.org</string>
    <string name="manage_stocks_title">Manage Stocks</string>
    <string name="manage_stocks_summary">Through this menu Stocks can be created or deleted</string>
    <string name="open_history_summary">The history shows all changes of the last 7 days.</string>
    <string name="open_history_title">Open History</string>
    <string name="export_csv_title">Export CSV</string>
    <string name="export_csv_summary">Export all Entries as CSV</string>
    <string name="barcode_resolver">Barcode Resolver</string>
    <string name="manage_stocks">Stock Management</string>
    <string name="history">History</string>
    <string name="export">Export</string>
    <string name="add">Add</string>
    <string name="remove">Take Out</string>
    <string name="open">Open</string>
    <string name="new_">New</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="start_inventory">Do Inventory</string>
    <string name="sort">Sort</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="remove_all_links">Remove all links</string>
    <string name="scan_code">Scan code</string>
    <string name="save_inventory">Complete Inventory</string>
    <string name="link">Link Entries</string>
    <string name="clear_selection">Clear Selection</string>
    <string name="qr_droid_download">QR Droid Download</string>
    <string name="google_play">Google Play</string>
    <string name="cancel">Cancel</string>
    <string name="no_qr_droid_installed">QR Droid is not installed</string>
    <string name="ok">OK</string>
    <string name="no_stock_set_message">No stock created yet. Without a stock no entries can be created or deleted. Please go to the settings and create at least one  stock.</string>
    <string name="no_sd_rights_exit_message">This app can\'t be used without the storage rights. The app is being closed now.</string>
    <string name="no_categories">No Categories</string>
    <string name="no_categories_set">There were no categories created yet.</string>
    <string name="choose_category">Choose Category</string>
    <string name="next">Next</string>
    <string name="choose_stock_for_inventory">Choose the stock for the inventory:</string>
    <string name="error_occured">Error occured</string>
    <string name="qr_no_result">QR Droid did not provide any information.</string>
    <string name="not_found">Not Found</string>
    <string name="article_not_found_message">The scanned article was not found in the current inventory.</string>
    <string name="choose_article_add">Choose Article (Add)</string>
    <string name="choose_article_remove">Choose Article (Take Out)</string>
    <string name="choose_article_open">Choose Article (Open)</string>
    <string name="quantity">Quantity</string>
    <string name="choose_count_add">Choose Quantity (Add)</string>
    <string name="choose_count_remove">Choose Quantity (Take Out)</string>
    <string name="new_quantity">New Quantity</string>
    <string name="current_quantity">Current Quantity</string>
    <string name="save_question">Save?</string>
    <string name="inventory_save_message">When you continue the scanned credit quantities will be set as new current quantities. Proceed?</string>
    <string name="error_reading_qrcode">Error reading the QR Code</string>
    <string name="inventory">Inventory</string>
    <string name="no_entry_for_qr_found">No entry with this code found</string>
    <string name="no_entry_in_this_stock">No entry found for this stock. But there were entries found in these stocks:</string>
    <string name="inventory_changed_for_entry_with_quantity">Credit quantity of entry %1$s increased to %2$d.</string>
    <string name="multiple_entries_for_barcode_found">Barcode found multiple times. Choose Entry:</string>
    <string name="debit">Debit</string>
    <string name="credit">Credit</string>
    <string name="choose_credit_quantity">Choose credit quantity</string>
    <string name="inventory_set_for_entry_with_quantity">Credit quantity of entry %1$s set to %2$d.</string>
    <string name="no_notes">No notes</string>
    <string name="no_date">No date</string>
    <string name="date_ascending">Date ascending</string>
    <string name="date_descending">Date descending</string>
    <string name="name_ascending">Name ascending</string>
    <string name="name_descending">Name descending</string>
    <string name="choose_sort">Choose sorting</string>
    <string name="shopping_list">Shopping List</string>
    <string name="stock">Stock</string>
    <string name="none">None</string>
    <string name="create_category">Create Category</string>
    <string name="details">Details</string>
    <string name="upc_api_key_not_found">UPC API Key not found</string>
    <string name="upc_api_key_not_found_message">For this feature to work you must provide an UPC API Key in the settings. This key can be created for free on www.upcdatabase.org</string>
    <string name="new_entry_created">New entry created</string>
    <string name="name">Name</string>
    <string name="min_quantity">minimum Quantity</string>
    <string name="note">Note</string>
    <string name="reminder_date">Reminder date</string>
    <string name="entry">Entry</string>
    <string name="deleted">deleted</string>
    <string name="changed">changed</string>
    <string name="following_items_linked">Following entries were linked</string>
    <string name="link_of_entry">Links for entry</string>
    <string name="removed">removed</string>
    <string name="following_links_removed">Following links removed</string>
    <string name="executed">executed</string>
    <string name="inventory_of_stock">"Inventory for stock: "</string>
    <string name="following_changes_done">Following changes were done:</string>
    <string name="no_storage">No storage</string>
    <string name="no_storage_message">"The storage of this device was not found. If you connected your device with the pc it must be disconnected. Otherwhise please put in an external storage. This is needed so that the app can access the saved app data. "</string>
    <string name="reminder_of">Reminder of</string>
    <string name="done">done</string>
    <string name="export_done_message">Export successfully done</string>
    <string name="barcode">Barcode</string>
    <string name="already_reminded">Already reminded</string>
    <string name="add_stock">Add stock</string>
    <string name="no_stock_name_message">You have to provide a name for this stock.</string>
    <string name="duplicate_stock_name_message">The provided name is already in use by another stock. Please choose another name.</string>
    <string name="manage_stock">Manage Stocks</string>
</resources>