<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:background="@android:color/white">

        <TextView
            style="@style/TextViewBaseStyle"
            android:text="@string/name_title" />
        <EditText
            style="@style/EditTextBaseStyle"
            android:id="@+id/store_detail_name"/>
        <TextView
            style="@style/TextViewBaseStyle"
            android:text="@string/color_title"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/store_detail_color_view"
                android:layout_width="150dp"
                android:layout_height="60dp" />
            <Button
                android:id="@+id/store_detail_button_color"
                style="@style/ButtonBaseStyle"
                android:background="@drawable/button_shape"
                android:text="@string/choose_color"/>
        </LinearLayout>

        <TextView
            style="@style/TextViewBaseStyle"
            android:text="@string/description_title"/>
        <EditText
            style="@style/EditTextBaseStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:ems="10"
            android:id="@+id/store_detail_description"
            android:lines="10" />
    </LinearLayout>
</ScrollView>